--- a/style.css
+++ b/style.css
@@ -4,16 +4,117 @@
     font-family: sans-serif;
     color: white;
   }
-  
+
+  main{
+    
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: repeat(5, 20vh);
+    grid-gap: 1em; 
+    padding: 1em; 
+  }
+
+
   #item-1 {
     background-color: steelblue;
+    grid-column: 2/span 1;
+    grid-row: 1/span 5;
+    padding-top: 8em;
+    text-align: center;
+    border-radius: 2%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
   
   #item-2 {
     background-color: #fe7e02;
+    grid-column: 1/span 1;
+    grid-row: 1/span 5;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2%;
   }
   
   #item-3 {
     background-color: #45525b;
+    grid-column: 3/span 1;
+    grid-row: 1/span 5;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2%;
+  }
+
+  #side-text1, #side-text2{ 
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
   }
   
+  @media screen and (min-width: 800px) and (max-width: 1000px) {
+    main{
+      display: grid;
+      grid-template-columns: 4fr 1fr;
+      grid-template-rows: repeat(5, 20vh);
+    }
+
+    #item-1 {
+      background-color: steelblue;
+      grid-column: 1/span 1;
+      grid-row: 1/span 4;
+      text-align: center;
+    }
+    
+    #item-2 {
+      background-color: #fe7e02;
+      grid-column: 1/span 2;
+      grid-row: 5/span 1;
+    }
+    
+    #item-3 {
+      background-color: #45525b;
+      grid-column: 2/span 1;
+      grid-row: 1/span 4;
+    }
+  
+    #side-text1{ 
+      transform: rotate(-90deg);
+    }  
+  }
+   
+  @media screen and (max-width: 799px){
+    main{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(5, 20vh);
+    }
+
+    #item-1 {
+      background-color: steelblue;
+      grid-column: 1/span 2;
+      grid-row: 1/span 4;
+      text-align: center;
+    }
+    
+    #item-2 {
+      background-color: #fe7e02;
+      grid-column: 1/span 1;
+      grid-row: 5/span 1;
+      text-align: center;
+    }
+    
+    #item-3 {
+      background-color: #45525b;
+      grid-column: 2/span 1;
+      grid-row: 5/span 1;
+      text-align: center;
+    }
+  
+    #side-text1, #side-text2{ 
+      transform: rotate(-90deg);
+    }  
+  }
+
